2010-01-07  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing 1.3.0 release.

	* geo_names.c: ensure that VerticalUnitsGeoKey works properly.

	* geo_write.c: switch SortKeys() to a simple bubble sort so we don't
	end up crashing when rewriting screwn geotiff tag sets with 
	duplicate geokeys (like some LAS files with multiple zero dummy tags)

	* geo_new.c: resize short and double arrays bigger when reading
	from an existing file to ensure we can update and add keys later.

2010-01-03  Frank Warmerdam  <warmerdam@pobox.com>

	* Makefile.am: set versioninfo to 2:0:0 as required by the change for
	1.3.0 in the ABI due to change of size of GTIFDefn structure. 
	(#19, GDAL #3309)

2009-12-30  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_new.c: fix computation of ascii key length introduced in past
	fix a few months ago that was breaking the GTIFImport() logic.  (#14)

2009-11-11  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Recognise 9841 and 1024 projection methods as 
	CT_Mercator: http://trac.osgeo.org/gdal/ticket/3217

2009-10-19  Frank Warmerdam  <warmerdam@pobox.com>

	* csv/{gcs,pcs}.override.csv: Add comments on where the master lives
	and incorporate COORD_SYS_CODE and Pulkovo 1942 GCS.

2009-09-24  Frank Warmerdam  <warmerdam@pobox.com>

	* geotiff_proj4.c: fix parameter mapping to proj4. for equirectangular
	per http://trac.osgeo.org/gdal/ticket/2706

	* autogen.sh: adjust to avoid version conflicts (#10).

	* geo_normalize.c/h, geotiff_proj4.c: Added DefnSet to GTIFDefn so 
	it can be properly established if a definition was set or if there
	were no geokeys (#12).  Corrects serious interim bug in geotiff_proj4.c

	* geo_new.c: avoid buffer overrun on corrupt input file (#14).

	* geo_print.c: Improve the precision when formatting values (#13).

2009-06-05  Paul Ramsey

	* csv: Update the EPSG csv files to the 7.1 release of the database.

2009-06-03  Frank Warmerdam  <warmerdam@pobox.com>
